# stm32f130c8t6_null

./: .clangd  .gitignore  flake.nix  startup_stm32f103c8t6.c  stm32f103c8t6.ld
Libraries/: data_type.h
RTOS/: os_kernel.c  os_list.c  os_pool.c  os_queue.c  os_task.c
RTOS/include/: os.h  os_config.h  os_list.h  os_pool.h  os_port.h  os_queue.h  os_task.h  os_timer.h  os_types.h
RTOS/portable/: os_port_cortex_m3.c  os_port_cortex_m3.h
docs/: 接口说明书.md
docs/tasks/: linkscript_tasks.md  startup_tasks.md
docs/示意图/: 时钟.dio
driver/: dri_ll.h  dri_ll_gpio.c  dri_ll_gpio.h  dri_ll_rcc.c  dri_ll_rcc.h
project/: CMakeLists.txt  arm-gnu-none-eabi.cmake
user/: main.c
